Fix layout bug when typing on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@
 
 .app {
     margin-top: 0 !important;
-    height: 100vh;
+    height: 100%;
 }
 
 .margin-base {
@@ -157,6 +157,7 @@
     .editor-pane {
         grid-row: 4 / 5;
         grid-column: 1 / 3;
+        max-height: 300px;
     }
 
     .editor-pane-full {
